# lib/db/src/schema/index.ts
@@ -9,3 +9,4 @@ export * from "./equipment";
 export * from "./time-off";
 export * from "./notifications";
 export * from "./time-entries";
+export * from "./job-contacts";
